--- a/apiserver/conf/application.conf
+++ b/apiserver/conf/application.conf
@@ -68,11 +68,30 @@ evolutionplugin=disabled
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=INFO
+logger.root=DEBUG
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+# Akka
+akka.actor.debug.receive = on
+akka {
+  quartz {
+    schedules {
+      Every30Seconds {
+        description = "A cron job that fires off every 30 seconds"
+        expression = "*/30 * * ? * *"
+      }
+    }
+    threadPool {
+        threadCount = 2
+        threadPriority = 5
+        daemonThreads = true
+    }
+  }
+  
+}
 
